# Homerunner

./: .autotools  .cproject  .gitignore  .project  AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  brainstorm.txt  configure  configure.ac  homerunner.plugin
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
homerunner/: .gitignore  Makefile.am  Makefile.in  channel_list.c  channel_list.h  channel_list.ui  homerunner.gresource.xml  homerunner_plugin.c  homerunner_plugin.c.orig  marshaller.list  schema.xsd  tj_channel_list.c  tj_channel_list.c.orig  tj_channel_list.h  tj_channel_list.h.orig  tj_channel_list.ui  tj_hdhr_channel_manager.c  tj_hdhr_channel_manager.h  tj_hdhr_manager.c  tj_hdhr_manager.c.orig  tj_hdhr_manager.h  tj_hdhr_manager.h.orig  tj_hdhr_playback_manager.c  tj_hdhr_playback_manager.h  tj_model_enums.h  tl_channel_list.c  tl_channel_list.h  tl_channel_list.ui  tl_hdhr_channel_manager.c  tl_hdhr_channel_manager.h  tl_hdhr_manager.c  tl_hdhr_manager.h  tl_hdhr_playback_manager.c  tl_hdhr_playback_manager.h  tl_model_enums.h
include/: Makefile.am  Makefile.in
